@@ -11,11 +11,14 @@ import nl.inholland.bankapi.util.JwtTokenProvider;
 import org.springframework.security.core.AuthenticationException;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.stereotype.Service;
-import java.util.ArrayList;
+
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+
 import java.util.List;
 import java.util.UUID;
 import java.util.function.Consumer;
-import java.util.stream.Collectors;
+
 
 @Service
 public class UserService {
@@ -37,30 +40,12 @@ public class UserService {
         return userRepository.findUserByFirstNameAndLastName(firstName, lastName).orElseThrow(() -> new EntityNotFoundException("User with: " + firstName+ " "+ lastName + " not found"));
     }
 
-    public List<UserDTO> getAllUsers(Integer offset, Integer limit, Boolean hasAccount){
-        List<User> allUsers = (List<User>) userRepository.findAll();
-        final List<UserDTO> dtos= new ArrayList<>();
-        List<UserDTO> users= dtos;
-        allUsers.forEach(user -> dtos.add(mapDtoToUser(user)));
-        if (offset != null && offset > 0) {
-            users = dtos.stream()
-                    .skip(offset)
-                    .collect(Collectors.toList());
+    public List<UserDTO> getAllUsers(Integer page, Integer size, Boolean hasAccount){
+        PageRequest pageable= PageRequest.of(page, size);
+        if (hasAccount !=null && hasAccount==false){
+            return userRepository.findAllByBankAccountsIsNull(pageable).getContent().stream().map(user -> mapDtoToUser(user)).toList();
         }
-
-        if (limit != null && limit > 0) {
-            users = dtos.stream()
-                    .limit(limit)
-                    .collect(Collectors.toList());
-        }
-
-        if (hasAccount != null && hasAccount==false) {
-            users = dtos.stream()
-                    .filter(user -> user.getBankAccounts().isEmpty())
-                    .collect(Collectors.toList());
-        }
-
-        return users;
+        return userRepository.findAll(pageable).getContent().stream().map(user -> mapDtoToUser(user)).toList();
     }
 
     public UserDTO getUserById(UUID id){
